objects/simpli_lv__List_View_Config__c.object
<CustomObject>
    <fields>
        <fullName>simpli_lv__List_View_Label__c</fullName>
        <label>List View Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>simpli_lv__List_View_Object__c</fullName>
        <description>Indicates the list view SFDC object that this list view config is associated with.</description>
        <inlineHelpText>Indicates the list view SFDC object that this list view config is associated with.</inlineHelpText>
        <label>List View Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>simpli_lv__Primary_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Primary Key</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>List View Config</label>
    <listViews>
        <fullName>simpli_lv__All</fullName>
        <columns>NAME</columns>
        <columns>simpli_lv__List_View_Label__c</columns>
        <columns>simpli_lv__List_View_Object__c</columns>
        <columns>simpli_lv__Primary_Key__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>List View API Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>List View Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>